# tests_examples

./: pyproject.toml  report.html  requirements.txt
allure-results/: 00506a6c-22d7-4275-8e43-c2398171f9e1-container.json  00bfa43b-96ee-4f38-89de-5d442379ba2a-result.json  025610af-1922-41ca-b5bf-f23662eb711c-container.json  04062cc8-f22b-4cc9-adcf-17356f3783a5-result.json  041b5c4b-56ac-45df-9ef8-498f851b0c4a-container.json  0492fcf7-ed28-4a75-907e-2ae2164af113-container.json  05c22c30-a662-4de1-95aa-76fddf90494c-container.json  05c6db5f-5bcf-4311-8155-770e387aaed7-container.json  05edd613-a44e-44f9-bd41-c3ed334cdab4-container.json  064f6cef-5cd6-4d2d-97c4-a8dd4c99a375-container.json  069aa65f-b417-4e5f-bfd3-d238ebab7ebe-container.json  072e2055-0776-4141-8a8d-f833318d4a29-container.json  0904e036-7a54-433c-b2c7-cce2279857cd-container.json  093be1ba-ed79-470f-8d56-20008091ddcb-container.json  096efe2b-1696-47ff-ae7a-4d39701c696d-container.json  09a35fde-87b0-43f4-9df9-bbc88e273f2d-container.json  09a64bc1-1678-46ce-9ff7-8a4f95c42223-container.json  09c79ff2-89fa-4373-b0e3-492803e776dc-container.json  0a07ed1b-1a57-4eeb-b13b-b95a52cddb07-container.json  0a94fb0b-880d-4ef9-a65e-b8dab9f6c2e0-container.json  0aacb7aa-e6be-455f-b208-e679e33cf5fa-container.json  0afaf520-1c5b-4472-bb4e-2a1670754c5c-result.json  0b7f0af6-07fd-4ee5-81a4-16fe10c9ff23-container.json  0c01a990-2f43-45d0-8b32-de0dfbc93143-result.json  0c2889ef-1ab2-458c-8629-1904a2fc37bb-result.json  0c2998bf-c406-4e37-8eea-8c6b0119f369-result.json  0c94b43a-a10b-4211-91cd-c14cdb8a8806-container.json  (+363 more)
(+5 files in other folders)
